--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
             <version>20210307</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.0</version> <!-- replace with the desired version -->
+        </dependency>
+
 
     </dependencies>
 
