--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,18 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.13.0</version> <!-- replace with the desired version -->
         </dependency>
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
